# OpenGL-Linux

./: .gitignore  CMakeLists.txt  README.md  glad.c  openg_l.cpp
include/glad/: glad.h
